# python-project-52

./: .coveragerc  .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
apps/labels/: views.py
apps/statuses/: forms.py  urls.py  views.py
apps/tasks/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: forms.py  views.py
common/: views.py
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0003_remove_label_tasks.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/: __init__.py  settings.py  tests.py  urls.py  views.py
task_manager/common/: views.py
task_manager/fixtures/: tasks.json  users.json
task_manager/labels/: tests.py
task_manager/statuses/: admin.py  forms.py  tests.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  views.py
task_manager/templates/: base.html  footer.html  index.html  login.html
task_manager/users/: admin.py  forms.py  tests.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_alter_task_executor.py  0003_alter_task_executor.py  0005_alter_task_author_alter_task_executor_and_more.py  0006_task_labels.py
users/: admin.py  forms.py  help_error_texts.py  models.py  tests.py  urls.py  views.py
users/fixtures/: labels.json  statuses.json  users.json
users/migrations/: 0001_initial.py  0003_rename_user_customuser.py  0004_remove_customuser_created_at.py  0005_customuser_created_at.py  (+2 more)
(+58 files in other folders)
